# cookiecutter-pypackage

./: .gitignore  README.rst  cookiecutter.json  pyproject.toml
.gitlab/issue_templates/: default.md
.gitlab/merge_request_templates/: default.md
docs/: conf.py
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .travis.yml  CONTRIBUTING.rst  README.rst  pyproject.toml  requirements.txt  requirements_test.txt  setup.py
{{cookiecutter.project_slug}}/.gitlab/merge_requeset_templates/: default.md
{{cookiecutter.project_slug}}/docs/: installation.rst
{{cookiecutter.project_slug}}/scripts/: build.sh  clean.sh  env.sh  log-env-variables.sh
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  cli.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/utils/: logutils.py  misc.py  viz.py
